# KeyBoard-CH32V203

./: .cproject  .gitignore  .project  .template  CMakeLists.txt  HID通讯协议.dot  KeyBoard.launch  KeyBoard.wvproj
.github/workflows/: build-toolchain.yml  build_fw.yml
Bootloader/: Link_bootloader.ld  startup_bootloader.S
Bootloader/src/: bootloader.c
Debug/: debug.c  debug.h  utils.c  utils.h
KeyBoard/: Link_app.ld  startup_app.S
KeyBoard/inc/: app.h  comm_controller.h  common.h  config.h  config_loader.h  config_manager.h  custom_endpoint.h  encode.h  hid_comm.h  key.h  key_map.h  key_scan.h  keymap.h  keymap_loader.h  rgb.h  rgb_led.h  utils.h
KeyBoard/src/: app.c  comm_controller.c  config_image.c  config_loader.c  config_manager.c  custom_endpoint.c  encode.c  hid_comm.c  key.c  key_map.c  key_scan.c  keymap.c  keymap_image.c  keymap_loader.c  main.c  rgb.c  rgb_led.c  utils.c
Ld/: Link.ld
Peripheral/inc/: ch32v20x.h  ch32v20x_gpio.h  ch32v20x_usart.h
Peripheral/src/: ch32v20x_adc.c  ch32v20x_pwr.c
Startup/: startup_ch32v20x_D6.S
USBLIB/CONFIG/: hw_config.c  hw_config.h  usb_conf.h  usb_desc.c  usb_desc.h  usb_endp.c  usb_endp.h  usb_prop.c  usb_pwr.c
USBLIB/CONFIG/inc/: hw_config.h  usb_conf.h  usb_desc.h  usb_endp.h  usb_istr.h  usb_prop.h
USBLIB/CONFIG/src/: hw_config.c  usb_desc.c  usb_endp.c  usb_istr.c  usb_prop.c
USBLIB/USB-Driver/inc/: usb_type.h
USBLIB/USB-Driver/src/: usb_core.c  usb_int.c  usb_mem.c
User/: ch32v20x_it.c  ch32v20x_it.h  main.c  system_ch32v20x.c  system_ch32v20x.h  utils.c  utils.h
board/: CH32V203xx.svd  Link.ld  startup.S  startup_ch32v20x_D6.S
docs/: EP5_Custom_Endpoint_Fix.md  EP5_Error_Code_10_Fix.md  comm_controller.md  comm_flow_generic.md  custom_endpoint_example.c.md  hid_callback.md  hid_comm_explain.md  hid_comm_process_state_machine.md  hid_comm_readme.md  hid_state_machine.dot  hid_state_machine.md  protocol.md  添加USB端点指南.md
scripts/: dowanload.bat  egypt.py  hid_comm_test.py  hid_rx_tester.py  merge_firmware.py
